# computer-graphics

OpenGL/: task1.cpp  task2.cpp
Raster-based-graphics-pipeline/: helper.cpp  helper.h  main.cpp  matrix.cpp  matrix.h  point.cpp  point.h  z_buffer.h
Ray-Tracing/: 1605003_Floor.h  1605003_General.h  1605003_Light.h  1605003_Objects.h  1605003_Point.h  1605003_Ray.h  1605003_Sphere.h  1605003_Triangle.h  1605003_main.cpp  CMakeLists.txt  script.sh
